@@ -23,6 +23,10 @@ Core and builtins
 - Fixed crash when printing a subclass of str and __str__ returned self.
   See SF bug #667147.
 
+- Fixed an invalid RuntimeWarning and an undetected error when trying
+  to convert a long integer into a float which couldn't fit.  
+  See SF bug #676155.
+
 Extension modules
 -----------------
 
